@@ -1,3 +1,7 @@
+2005-01-10  Ben Maurer  <bmaurer@ximian.com>
+
+	* TypeGraphViewer.cs: More reasonable default sizes
+
 2005-01-09  Ben Maurer  <bmaurer@ximian.com>
 
 	* *: Initial Import.
